--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,7 @@
   <meta name="theme-color" content="#fafafa">
   <script>
     var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
+    _smartsupp.key = '97def132dc8ad6f20a469bfe5d298d7571e0f2ea';
     window.smartsupp||(function(d) {
       var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
       s=d.getElementsByTagName('script')[0];c=d.createElement('script');
