--- a/contactos.html
+++ b/contactos.html
@@ -25,7 +25,7 @@
   <meta name="theme-color" content="#fafafa">
   <script>
     var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
+    _smartsupp.key = '97def132dc8ad6f20a469bfe5d298d7571e0f2ea';
     window.smartsupp||(function(d) {
       var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
       s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -129,6 +129,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
     </div>
+    <div class="anchor-point"></div>
   </section>
 
   <footer>
