--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="theme-color" content="#fafafa">
   <script>
     var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
+    _smartsupp.key = '97def132dc8ad6f20a469bfe5d298d7571e0f2ea';
     window.smartsupp||(function(d) {
       var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
       s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -110,7 +110,7 @@
                     <div class="col-lg-1 col-md-12 col-sm-12">
                       <span><b>01</b>/03</span>
                     </div>
-                    <div class="col-lg-5 col-md-5 col-sm-12 animista fade-in-bottom">
+                    <div class="col-lg-5 col-md-12 col-sm-12 animista fade-in-bottom">
                       <span class="subtitle anim-delay-1">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
                       <h1><span class="anim-delay-0-2">A</span> <span class="anim-delay-0-3">evolução</span> <span class="anim-delay-0-4">do</span> <span class="anim-delay-0-5">seu</span><br> <span class="anim-delay-0-6">negócio</span> <span class="anim-delay-0-7">começa</span><br> <span class="anim-delay-0-8">aqui</span> <span class="anim-delay-0-9">e</span> <span class="anim-delay-0-10">agora</span></h1>
                       <a class="btn-blue-ball btn-dark anim-delay-5" href="./sobre.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
@@ -425,10 +425,10 @@
                     <input type="text" id="email" name="mail" placeholder="Email*"><br>
                     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
                     <div class="row align-center">
-                      <div class="col-lg-6 col-md-6 col-sm-6">
+                      <div class="col-lg-6 col-md-6 col-sm-12">
                         <a id="continue" class="btn-blue-ball btn-dark blue-ball-inverted"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                      <div class="col-lg-6 col-md-6 col-sm-12 align-right">
                         <div class="counter"><span>01</span>/02</div>
                       </div>
                     </div>
@@ -443,10 +443,10 @@
                     <label><input type="radio" id="newsletter" name="newsletter" value="newsletter">Quero subscrever a newsletter</label>
                     <label><input type="radio" id="privacy" name="privacy" value="privacy">Li e aceito a <a href="#">Política de Privacidade</a></label>
                     <div class="row align-center">
-                      <div class="col-lg-6 col-md-6 col-sm-6">
+                      <div class="col-lg-6 col-md-6 col-sm-12 go-left">
                         <div class="counter"><span>02</span>/02</div>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                      <div class="col-lg-6 col-md-6 col-sm-12 align-right go-right">
                         <a id="send" class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
                       </div>
                     </div>
@@ -456,11 +456,11 @@
                   <span class="subtitle">OBRIGADO</span>
                   <h2>Entraremos em<br> contacto consigo<br> com a maior<br> brevidade.</h2>
                   <div class="row align-center">
-                    <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <div class="questions">TEM MAIS QUESTÕES?</div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 align-right">
-                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Fale connosco</span></a>
+                    <div class="col-lg-6 col-md-6 col-sm-12 align-right">
+                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="/contactos.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Fale connosco</span></a>
                     </div>
                   </div>
                 </div>
