--- a/servicos.html
+++ b/servicos.html
@@ -26,7 +26,7 @@
   <meta name="theme-color" content="#fafafa">
   <script>
     var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
+    _smartsupp.key = '97def132dc8ad6f20a469bfe5d298d7571e0f2ea';
     window.smartsupp||(function(d) {
       var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
       s=d.getElementsByTagName('script')[0];c=d.createElement('script');
@@ -150,8 +150,9 @@
         </div>
       </div>
     </div>
+      <div class="anchor"></div>
       <div id="Tab1" class="tabcontent">
-
+        
         <section class="services section-2">
           <div class="service-wrapper">
             <div class="row align-center">
@@ -865,7 +866,7 @@
 
     $(".tablink").click(function() {
         $('html,body').animate({
-            scrollTop: $(".tabcontent").offset().top},
+            scrollTop: $(".anchor").offset().top - 200},
             'slow');
     });
 
