--- a/index.html
+++ b/index.html
@@ -422,11 +422,14 @@
                   <h2>Vamos transformar<br> o seu negócio?</h2>
                   <form>
                     <input type="text" id="name" name="fname" placeholder="Nome*"><br>
+                    <span class="error">Por favor indique o seu nome.</span></td>
                     <input type="text" id="email" name="mail" placeholder="Email*"><br>
+                    <span class="error">Por favor indique o seu email.</span>
+                    <span class="error" id="invalid_email">O email introduzido é inválido.</span>
                     <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
                     <div class="row align-center">
                       <div class="col-lg-6 col-md-6 col-sm-12">
-                        <a id="continue" class="btn-blue-ball btn-dark blue-ball-inverted"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                        <a id="continue" class="btn-blue-ball btn-dark blue-ball-inverted" type="submit" value="submit" disabled="disabled"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
                       </div>
                       <div class="col-lg-6 col-md-6 col-sm-12 align-right">
                         <div class="counter"><span>01</span>/02</div>
@@ -439,15 +442,19 @@
                   <h2>Vamos transformar<br> o seu negócio?</h2>
                   <form>
                     <input type="text" id="empresa" name="enterprise" placeholder="Empresa*"><br>
+                    <span class="error">Por favor indique o nome da empresa.</span></td>
                     <input type="text" id="colaboradores" name="colaboradores" placeholder="Nº Colaboradores"><br>
                     <label><input type="radio" id="newsletter" name="newsletter" value="newsletter">Quero subscrever a newsletter</label>
                     <label><input type="radio" id="privacy" name="privacy" value="privacy">Li e aceito a <a href="#">Política de Privacidade</a></label>
                     <div class="row align-center">
-                      <div class="col-lg-6 col-md-6 col-sm-12 go-left">
+                      <div class="col-lg-2 col-md-2 col-sm-12 go-left">
                         <div class="counter"><span>02</span>/02</div>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-12 align-right go-right">
-                        <a id="send" class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
+                      <div class="col-lg-5 col-md-5 col-sm-12 align-right go-right">
+                        <a id="return" class="btn-blue-ball btn-dark blue-ball-inverted"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-left-blue.svg"></div><span>Voltar</span></a>
+                      </div>
+                      <div class="col-lg-5 col-md-5 col-sm-12 align-right go-right">
+                        <a id="send" class="btn-blue-ball btn-dark blue-ball-inverted"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
                       </div>
                     </div>
                   </form>
