--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="col-lg-7 col-md-7 col-sm-12">
 
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-9">
+        <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-1">
           <nav class="slider-nav">
             <a href="#slide-0" class="active"></a> 
             <a href="#slide-1"></a> 
@@ -323,11 +323,11 @@
   <section class="homepage section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row align-bottom">
-        <div class="col-lg-9 col-md-9">
+        <div class="col-lg-9 col-md-8">
           <span class="subtitle anim-delay-0-5">INSIGHTS</span>
           <h2><span class="anim-delay-0-6">Estamos</span> <span class="anim-delay-0-7">sempre</span> <span class="anim-delay-0-8">a</span> <span class="anim-delay-0-9">aprender</span><br> <span class="anim-delay-0-6">e</span> <span class="anim-delay-0-7">escrevemos</span> <span class="anim-delay-0-10">sobre</span> <span class="anim-delay-0-11">isso</span></h2>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12">
+        <div class="col-lg-3 col-md-4 col-sm-12">
           <a class="btn-blue-ball btn-dark anim-delay-5" href="./blog.html"><div class="btnball"><img class="btn-img" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
         </div>
       </div>
@@ -335,15 +335,15 @@
     
     <div class="larger-wrapper">
       <div class="row banner-img animista slide-in-left">
-        <div class="col-lg-9 col-md-9 anim-delay-6">
+        <div class="col-lg-9 col-md-12 col-sm-12 anim-delay-6">
             <img class="img-fluid" src="img/insight-img.jpg">
         </div>
-        <div class="col-lg-3 col-md-3"></div>
+        <div class="col-lg-3 col-md-3 mobile"></div>
       </div>
       <div class="row animista fade-in-bottom">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 mobile">
         </div>
-        <div class="col-lg-6 col-md-6 anim-delay-7">
+        <div class="col-lg-6 col-md-12 col-sm-12 anim-delay-7">
           <div class="primary-article">
             <span class="subtitle">ARTIGO 01 SET 2020</span><br>
             <h3 class="article-title">INOBUZZ: Otimização de recursos em contexto digital</h3>
@@ -407,14 +407,14 @@
     <section class="footer-1 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row align-center">
-          <div class="col-lg-5 col-md-5 col-sm-12 order-second">
+          <div class="col-lg-5 col-md-6 col-sm-12 order-second">
             <span class="subtitle anim-delay-1">Onde estamos</span>
             <p class="address"><span class="anim-delay-2">Tagus Park, Edifício Núcleo Central 100,</span><br> <span class="anim-delay-3">Salas 342, 344, 346</span><br> <span class="anim-delay-4">2740-122 Porto Salvo, Portugal</span></p>
             <span class="subtitle anim-delay-5">fale connosco</span><br>
             <p><a class="anim-delay-6" href="tel:+351211383266">(+351) 211 383 266</a><br>
             <a class="anim-delay-7" href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-12 order-first animista slide-in-right">
+          <div class="col-lg-7 col-md-6 col-sm-12 order-first animista slide-in-right">
             <div class="form-slider">
               <div class="form-slider-wrapper">
                 <div class="footer-form">
@@ -505,7 +505,7 @@
     <div class="absolute-footer">
       <div class="wrapper">
         <div class="row">
-          <div class="col-lg-7 col-md-7 col-sm-12 align-center">
+          <div class="col-lg-7 col-md-12 col-sm-12 align-center">
             <div class="social">
               <div class="social-media"> 
                 <span>SOMOS BUZZBEAT</span>
